# brain-dev

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Makefile  PYPI_STATUS.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  pyproject.toml  spec.md
.github/: dependabot.yml
.github/workflows/: coverage.yml  test.yml
LeaseGate/src/LeaseGate.Audit/: AuditEvent.cs  IAuditWriter.cs  JsonlAuditWriter.cs
LeaseGate/src/LeaseGate.Policy/: LeaseGatePolicy.cs  PolicyEngine.cs  PolicySnapshot.cs
LeaseGate/src/LeaseGate.Protocol/: Enums.cs  LeaseDtos.cs  PipeMessageFraming.cs  PipeMessages.cs  ProtocolJson.cs  ProtocolVersionInfo.cs
LeaseGate/src/LeaseGate.Service/: LeaseGovernor.cs  LeaseGovernorOptions.cs  NamedPipeGovernorServer.cs
LeaseGate/src/LeaseGate.Service/Leases/: LeaseRecord.cs  LeaseStore.cs
LeaseGate/src/LeaseGate.Service/TokenPools/: ConcurrencyPool.cs  DailyBudgetPool.cs
brain_dev/: README.md  __init__.py  analyzer.py  config.py  pyproject.toml  server.py  smart_test_generator.py
dev_brain/: __init__.py  config.py  server.py  smart_test_generator.py
site/: astro.config.mjs
site/src/: site-config.ts
site/src/content/docs/handbook/: beginners.md  getting-started.md  index.md  security-patterns.md  tools.md
tests/: conftest.py  test_analyzer.py  test_coverage_gaps.py  test_integration.py  test_new_analyzers.py  test_new_tools.py  test_server.py  test_smart_generator.py  test_version.py
